@@ -1,3 +1,8 @@
+2004-06-21  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/undo-browse.el:
+	initial checkin
+
 2004-06-20  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/mycode.el:
